sophons/apps/pds/deployment.yaml
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/v1.34.1/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bluesky-pds
  namespace: bluesky
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bluesky-pds
      app.kubernetes.io/instance: pds
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bluesky-pds
        app.kubernetes.io/instance: pds
    spec:
      serviceAccountName: bluesky-pds

      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch

      containers:
        - name: bluesky-pds
          image: "ghcr.io/bluesky-social/pds:0.4.208"
          # command: ["sleep", "10000"]
          ports:
            - name: pds-port
              containerPort: 3000
              protocol: TCP

          volumeMounts:
            - name: fs
              mountPath: /fs
              mountPropagation: HostToContainer
            # - name: data
            #   mountPath: /pds
            # - name: blobstore
            #   mountPath: /blobstore

          livenessProbe:
            httpGet:
              path: /xrpc/_health
              port: pds-port

          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 512Mi
      volumes:
        - name: fs
          emptyDir: {}
        - name: litestream
          configMap:
            name: litestream
