sophons/apps/pds/statefulset.yaml
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/v1.35.2/statefulset-apps-v1.json
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bluesky-pds
  namespace: bluesky
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bluesky-pds
      app.kubernetes.io/instance: pds
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bluesky-pds
        app.kubernetes.io/instance: pds
    spec:
      terminationGracePeriodSeconds: 120
      serviceAccountName: bluesky-pds

      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: bluesky-pds
          image: ghcr.io/bluesky-social/pds:0.4.5027
          ports:
            - name: pds-port
              containerPort: 3000
              protocol: TCP

          volumeMounts:
            - name: tmp
              subPath: pds
              mountPath: /pds
            - name: tmp
              subPath: tmp
              mountPath: /tmp

          livenessProbe:
            httpGet:
              path: /xrpc/_health
              port: pds-port

          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 512Mi

      volumes:
        - name: tmp
          emptyDir: {}
        - name: litestream-config
          configMap:
            name: litestream-config
        - name: actor-keys
          secret:
            secretName: pds-actor-keys
