sophons/apps/pds/httproute.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/nlamirault/schema-hub/main/schemas/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bluesky-pds
  namespace: bluesky
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Bluesky Personal Data Server
    gethomepage.dev/group: Admin
    gethomepage.dev/icon: bluesky.svg
    gethomepage.dev/name: Bluesky PDS
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure

  hostnames:
    - pds.vrtx.sh

  rules:
    - backendRefs:
        - name: bluesky-pds
          port: 3000
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/nlamirault/schema-hub/main/schemas/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bluesky-profile
  namespace: bluesky
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure

  hostnames:
    - bsky.vrtx.sh

  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            statusCode: 302
            hostname: bsky.app
            path:
              type: ReplaceFullPath
              replaceFullPath: /profile/vrtx.sh
